k8s/mssql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql
  labels:
    app: mssql
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mssql
  template:
    metadata:
      labels:
        app: mssql
    spec:
      securityContext:
        fsGroup: 10001
      containers:
        - name: mssql
          image: mcr.microsoft.com/mssql/server:2022-latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 1433
              protocol: TCP
          resources:
            requests:
              memory: "2Gi"
              cpu: "250m"
            limits:
              memory: "3Gi"
              cpu: "1000m"
          volumeMounts:
            - name: mssql-data
              mountPath: /var/opt/mssql
          readinessProbe:
            tcpSocket:
              port: 1433
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 1433
            initialDelaySeconds: 60
            periodSeconds: 20
      volumes:
        - name: mssql-data
          persistentVolumeClaim:
            claimName: catalog-mssql-pvc
