k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-api
  labels:
    app: catalog-api
spec:
  type: LoadBalancer
  selector:
    app: catalog-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5063
